--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -211,6 +211,7 @@ Glossareintrag \glqq live\grqq{}: statt Echtzeit lieber \glqq live\grqq{} verwen
   \item[/NF060/] Nach Ausführung der Funktion  Sprachänderung (/F260/) muss die App neu gestartet werden.
   \item[/NF070/] Bei negative Anzahl Angaben (/F220/) wird das Starten des Vorgangs verhindert.
   \item[/NF080/] Bei Namensänderung (/F250/) werden gespeicherte Daten (siehe ev. /F300/) nicht verändert.
+  \item[/NF090/] Bei Namensgebung sind nur Groß- und Kleinbuchstaben ohne Umlaute und Sonderzeichen erlaubt.
 \end{itemize}
 \subsection{Laufzeitverhalten}
 \subsection{Speicherplatz}
@@ -225,6 +226,7 @@ TODO Jan
 \end{center}
 \section{Benutzeroberfläche}
 TODO Benni auseinandersetzen
+\section{Qualitätszielbestimmungen} %%Wasn hiermit? Stand noch in der Mail als Unterpunkt. https://www.sosy-lab.org/Teaching/2015-WS-SEP/samples/pflichtenheft.pdf Seite 13 sieht man so eine Tabelle, wie ist das gemeint?
 \section{Globale Testfälle und Szenarien}
 TODO David
   \subsection{Globale Testfälle}
