--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -188,8 +188,14 @@ TODO Valle Koordination
 
 
 \section{Produktdaten}
-TODO Benni
-% Was soll gespeichert werden?
+\begin{itemize}
+	\item[/PD010/] Es werden keine rohen Messdaten gespeichert.
+	\item[/PD020/] Die Einstellungen (Sprache, Steuerungsparameter, Messeinstellungen) sind zu speichern. 
+	\item[/PD030/] Es sind relevante Daten über den Nutzer, wie den Benutzernamen, zu speichern.
+	\item[/PD040/] Die Trainingsdaten (Bestenliste und letzte Trainingseinheit) sind zu speichern. % Genauer definieren, was alles?
+	\item[/PD050/] Speicherung aller Vorgänge, die aktiv waren mit Datum, Uhrzeit und dem letzten Resultat (/F300/) (TODO abklären, ob umsetzen)
+\end{itemize}
+
 
 \section{Nichtfunktionale Anforderungen}
 TODO Jan Koordination
