*.pdf aus .gitignore entfernt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -228,7 +228,7 @@ TODO Jan
   \subsection{Architekturdiagramm}
   \subsection{Use-Case-Diagramme}
 \begin{center}
-% \includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
+%\includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
 \end{center}
 \section{Benutzeroberfläche}
 TODO Benni auseinandersetzen
@@ -237,7 +237,7 @@ TODO Benni auseinandersetzen
 TODO David
   \subsection{Globale Testfälle}
   \subsubsection{Mussanforderungen}
-  \textbf{Schritterkennung beim Gehen}
+  \paragraph{Schritterkennung beim Gehen}
   \begin{enumerate}
     \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
     \item Die App wird gestartet.
@@ -248,7 +248,7 @@ TODO David
     \item Sobald der Nutzer wieder still steht ändert sich der Zustand wieder zurück zu \glqq stehend\grqq. 
   \end{enumerate}
 
-  \textbf{Start/Stop Musikmodus}
+  \paragraph{Start/Stop Musikmodus}
   \begin{enumerate}
     \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
     \item Der Nutzer spielt Musik mit der vorinstallierten Musik-App ab.
