hatte dinge sehr durcheinander wegen stashen. sollte jetzt wieder passen

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -70,15 +70,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % GLOSSARY ENTRIES                 	                              	 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
 %%sollte 'eigentlich' funktionieren... tut es nur leider nicht aber naja.
-=======
 
->>>>>>> Stashed changes
-=======
-
->>>>>>> Stashed changes
 \newglossaryentry{Echtzeit}{name=Echtzeit, description={mit einer durch die Verarbeitung bedingten Verzögerung von bis zu 3 Sekunden zwischen dem Anfallen der (Roh-)Daten und der Ausgabe bzw. Visualisierung.}}
 
 
@@ -94,11 +87,7 @@
  \pagenumbering{arabic}
 
 \section{Einleitung}
-<<<<<<< Updated upstream
-Earables gehören zu den Wearable Computings. Sie sind also nichts anderes als intelligente Kopfhörer. Je nach dem wie sie ausgestattet werden bringen sie die unterschiedlichsten Funktionen mit sich. Neben der klassischen Austattung von  Lautsprechern, Mikrophon und Bluetooth Low Energy besitzen sie in unserem Fall zusätzlich ein 6-Achsen IMU. Mit seiner Hilfe ist man in der Lage die (Kopf-)Bewegung des Nutzers zu tracken um mit den gewonnenen Messdaten  beispielsweise die Atemfrequenz zu ermitteln. Earebles bilden also eine Schnittstelle von Mensch und Computer. Mit ihnen kann man unauffällig medizinische Daten im Altag sammeln. Da sie kaum von normalen Bluetooth Kopfhörern zu unterscheiden sind haben sie bereits ein hohe soziale akzeptans in der Gesellschaft erlangt, im Gegensatz zu beispielsweise den smart Glasses. Mit der Entwicklung und Forschung dieser Art von Earables beschäftigt sich das globale eSense Projekt von Nokia Bell Labs in Zusammenarbeit mit dem Telecooperation Office (TECO). Hier wird gemeinsam nach möglichen Anwendungsfällen der Earables gesucht, wodurch auch dieses Projekt seinen Weg in diese Welt gefunden hat.
-=======
 Earables gehören zu den Wearable Computings. Sie sind also nichts anderes als intelligente Kopfhörer. Je nach dem wie sie ausgestattet werden bringen sie die unterschiedlichsten Funktionen mit sich. Neben der klassischen Austattung von  Lautsprechern, Mikrophon und Bluetooth Low Energy besitzen sie in unserem Fall zusätzlich ein 6-Achsen IMU (Beschleunigungssensor und Gyroskop). Mit seiner Hilfe ist man in der Lage die (Kopf-)Bewegung des Nutzers zu tracken um mit den gewonnenen Messdaten  beispielsweise die Atemfrequenz zu ermitteln. Earebles bilden also eine Schnittstelle von Mensch und Computer. Mit ihnen kann man unauffällig medizinische Daten im Altag sammeln. Da sie kaum von normalen Bluetooth Kopfhörern zu unterscheiden sind haben sie bereits ein hohe soziale akzeptans in der Gesellschaft erlangt, im Gegensatz zu beispielsweise den smart Glasses. Mit der Entwicklung und Forschung dieser Art von Earables beschäftigt sich das globale eSense Projekt von Nokia Bell Labs in Zusammenarbeit mit dem Telecooperation Office (TECO). Hier wird gemeinsam nach möglichen Anwendungsfällen der Earables gesucht, wodurch auch dieses Projekt seinen Weg in diese Welt gefunden hat.
->>>>>>> Stashed changes
 \section{Zielbestimmung}
 Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 \begin{enumerate}
@@ -121,7 +110,6 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
     \item\text Die GUI der App muss so benutzerfreundlich gestaltet werden, dass der Benutzer intuitiv weiß wie man die Steuerungsparameter der Earables verändert
   \end{itemize}
 \subsection{Wunschkriterien}
-<<<<<<< Updated upstream
   \begin{itemize}
     \item\text Die App soll die Schrittfrequenz des Nutzers anzeigen
     \item\text Die App soll die Anzahl der zurückgelegten Schritte anzeigen
@@ -139,10 +127,6 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
     \item\text Die App wird auf deutsch sein, aber der Nutzer kann weitere Sprachen durch Sprachpaket-Plugins hinzufügen
     \item\text Der Nutzer kann seine Trainingsdaten speichern, importieren und exportieren
   \end{itemize}
-=======
-%%bitte stichpunkte
-Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und das im besten Fall in \Gls{Echtzeit}. Mit einer kurzen Verzögerung von ein paar Sekunden wird jedoch gerechnet. Zusätzlich soll die Anzahl der Schritte ausgegeben werden wodurch man die zurückgelegten Distanz ermitteln kann. Diese wird ebenfalls ausgegeben. Des weiteren sind 3 verschiedene Modi geplant. Im Modus „Counter“ zählt die App wie viele Liegestützen oder Sit Ups der Nutzer macht. Über den Modus „Listen and Perform“ ist der Nutzer in der Lage seinen eigenen Trainingsplan individuell für sich zu erstellen. Dieser wird dann, mit Hilfe von Text to Speech ausgegeben. Im letzten Modus Namens „Musik Run“ wird die Musik automatisch gestoppt, wenn der Nutzer steht und wieder gestartet, sobald der Nutzer damit beginnt weiter zu laufen. Die App wird auf deutsch sein, aber der Nutzer kann weitere Sprachen durch Sprachpaket-Plugins hinzufügen. Zum Abschluss soll es für den Nutzer möglich sein seine Trainingsdaten zu speichern, importieren und exportieren, um so mehrere „Projekte“ anzulegen.
->>>>>>> Stashed changes
   \subsection{Abgrenzungskriterien}
   \begin{itemize}
     \item\text Es werden keine Rohdaten gespeichert
@@ -198,15 +182,7 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
     \subsubsection{App}
     %%TODO valle Glossareintrag Vorgang: "aktiv in modus"
       %%alles kürzer schreiben, nur je 1 Stichpunkt
-      \begin{itemize}
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
       \item[/F070/] \textsf{App starten:} Der Nutzer kann die App über sein Smartphone starten. Die App startet im Laufmodus.%%!! hatten wir uns glaube ich drauf geeinigt (?) - valle
-=======
-=======
->>>>>>> Stashed changes
-      \item[/F070/] \textsf{App starten:} Der Nutzer kann die App über sein Smartphone starten. %%weglassen? Startbildschirmanzeige?
->>>>>>> Stashed changes
       \item[/F080/] \textsf{Modus auswählen:} Auswahl eines Modus aus allen verfügbaren Modi (also mindestens der Modus \glqq Laufen/Stehen anzeigen\grqq). 
       \item[/F090/] \textsf{Modus wechseln:} Wechseln zwischen Modi, während ein Modus aktiv ist. %%aktueller Modus stoppt, nichtfunktionale Anforderung? - nicht der Modus, sondern der Vorgang stoppt (valle)
       \item[/F100/] \textsf{Laufmodus:} Liveanzeige, ob Nutzer gerade \glqq läuft\grqq{} oder \glqq steht\grqq{}.
@@ -217,25 +193,12 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
   \subsection{Wunschanforderungen}
     \subsubsection{Erweiterungsmodul}
       Weitere Datenauswertung:
-<<<<<<< Updated upstream
       \begin{itemize}
       \item[/F140/] \textsf{Schrittfrequenzerkennung}%%Ungenutzt?? - geklärt. wird beibehalten (valle) (siehe Protokoll 14.11.)
       \item[/F150/] \textsf{Schrittzahlzähler} Zählen der Schritte des Nutzers. %%getauscht wegen logischer Reihenfolge!!
       \item[/F160/] \textsf{Distanzmessung} Anzeige während und nach des Vorgangs in z.B. Metern, umgerechnet aus der Anzahl der Schritte.
       \item[/F170/] \textsf{Erkennung Situps}
       \item[/F180/] \textsf{Erkennung Liegestütze}
-=======
-      %%Redundante Erklärung der Funktionen
-      \begin{itemize}
-      \item[/F140/] \textsf{Schrittfrequenzerkennung} Erkennung der Schrittfrequenz des Nutzers. %%Ungenutzt??
-      \item[/F150/] \textsf{Distanzmessung} Erkennung der zurückgelegten Distanz des Nutzers.
-      \item[/F160/] \textsf{Schrittanzahlzähler} Zählen der Schritte des Nutzers.
-      \item[/F170/] \textsf{Erkennung Situps} Erkennung von Situps.
-      \item[/F180/] \textsf{Erkennung Liegestütze} Erkennung von Liegestütze.
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
       \end{itemize} 
     \subsubsection{App}
       Weitere Modi:
@@ -299,11 +262,7 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
   \subsection{Architekturdiagramm}
   \subsection{Use-Case-Diagramme}
 \begin{center}
-<<<<<<< Updated upstream
 %\includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
-=======
-%%\includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf}
->>>>>>> Stashed changes
 \end{center}
 \section{Benutzeroberfläche}
 %%TODO Benni auseinandersetzen
@@ -312,13 +271,8 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
 \section{Globale Testfälle und Szenarien}
 %%TODO David
   \subsection{Globale Testfälle}
-<<<<<<< Updated upstream
   \subsubsection{Mussanforderungen}
-<<<<<<< Updated upstream
-  \paragraph{Schritterkennung beim Gehen}
-=======
-  \textbf{Schritterkennung beim Gehen}%%bitte Namen der Funktionalen Anf. verwenden!!
->>>>>>> Stashed changes
+  \paragraph{Schritterkennung beim Gehen}%%bitte Namen der Funktionalen Anf. verwenden!!
   \begin{enumerate}
     \item Das Smartphone wird per Bluetooth mit den Kopfhörern verbunden.
     \item Die App wird gestartet.
@@ -344,8 +298,6 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
     \item Die Musik startet automatisch wieder.
   \end{enumerate}
 
-  
-=======
   \subsubsection{Schritterkennung beim Gehen}
   %%vielleicht ohne absätze als Fließtext? -valle
     \begin{itemize}
@@ -362,7 +314,6 @@ Als Wunschkriterium soll die App die Schrittfrequenz des Nutzers anzeigen und da
     \item[]
     \item[] 
   \end{itemize}
->>>>>>> Stashed changes
   \subsection{Szenarien}
     \subsubsection{Bibliotheksnutzung}
 
